# smallnum

./: .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.mkd  build.sh  doxy.conf  number.c  number.h
test/: a.out  test.c
